--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
+    "express-async-errors": "^2.1.0",
     "express-oauth-server": "^2.0.0",
     "milligram": "^1.3.0",
     "mustache-express": "^1.2.5",
